src/transform/shot_count_block/snapshots/qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__cartesian_rotations.snap
---
source: src/transform/shot_count_block/quil.rs
expression: result.program.to_string(true)
---
DECLARE ro BIT[0]
RX(2.0) 0
RY(2.0) 0
RZ(2.0) 0

