src/transform/shot_count_block/snapshots/qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__measure.snap
---
source: src/transform/shot_count_block/quil.rs
assertion_line: 201
expression: result.program.to_string(true)

---
DECLARE ro BIT[1]
MEASURE 1 ro[0]

