src/transform/shot_count_block/snapshots/qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__parametric.snap
---
source: src/transform/shot_count_block/quil.rs
assertion_line: 203
expression: result.program.to_string(true)

---
DECLARE __qir_param REAL[2]
DECLARE ro BIT[0]
RZ(__qir_param[0]) 0
RZ(__qir_param[1]) 0

