src/transform/shot_count_block/snapshots/qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__reduction.snap
---
source: src/transform/shot_count_block/quil.rs
expression: result.program.to_string(true)
---
DECLARE ro BIT[1]
H 2
MEASURE 2 ro[0]

