src/transform/shot_count_block/snapshots/qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__shot_count_loop.snap
---
source: src/transform/shot_count_block/quil.rs
assertion_line: 200
expression: result.program.to_string(true)

---
DECLARE ro BIT[0]
H 12

